// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextTest Text alignment 1`] = `
{
  "AutomationId": "text-align",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 151,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "auto (default) - english LTR",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "أحب اللغة العربية auto (default) - arabic RTL",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "left left left left left left left left left left left left left left left",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "center center center center center center center center center center center",
      "Top": 57,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "right right right right right right right right right right right right right",
      "Top": 76,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 56,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "justify (works when api level >= 26 otherwise fallbacks to "left"): this text component's contents are laid out with "textAlign: justify" and as you can see all of the lines except the last one span the available width of the parent container.",
      "Top": 95,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text background color 1`] = `
{
  "AutomationId": "text-background-color",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Red background, blue background, inherited blue background, nested green background.",
      "TextHighlighters": [
        {
          "Background": "#FFFFAAAA",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 84,
              "StartIndex": 0,
            },
          ],
        },
        {
          "Background": "#FFAAAAFF",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 69,
              "StartIndex": 15,
            },
          ],
        },
        {
          "Background": "#FFAAAAFF",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 52,
              "StartIndex": 32,
            },
          ],
        },
        {
          "Background": "#FFAAFFAA",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 25,
              "StartIndex": 59,
            },
          ],
        },
      ],
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Same alpha as background,Inherited alpha from background,Reapply alpha",
      "TextHighlighters": [
        {
          "Background": "#4D646464",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 70,
              "StartIndex": 0,
            },
          ],
        },
        {
          "Background": "#4D646464",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 45,
              "StartIndex": 25,
            },
          ],
        },
        {
          "Background": "#4D646464",
          "Foreground": "#FF000000",
          "Ranges": [
            {
              "Length": 13,
              "StartIndex": 57,
            },
          ],
        },
      ],
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text border 1`] = `
{
  "AutomationId": "text-border",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 385,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 385,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 28,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Sample bordered text with default styling.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 400,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 138,
              "HorizontalAlignment": "Stretch",
              "Left": 100,
              "Margin": "0,0,0,0",
              "Padding": "30,30,30,30",
              "Text": "Some more bordered text + a tad of CSS.
1st nested - border specifcied but ignored.
2nd Inside text!",
              "Top": 128,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 518,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text is outlined and laid out within the normal text run, so will wrap etc as normal text.",
              "Top": 366,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text can have advanced borders 1`] = `
{
  "AutomationId": "advanced-borders",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 99,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 99,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 39,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text has customized borders.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 39,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text has customized borders.",
              "Top": 39,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 21,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text has customized borders.",
              "Top": 78,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text can have customized accessibility 1`] = `
{
  "AutomationId": "text-accessibility",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "AutomationPositionInSet": 1,
              "AutomationSizeOfSet": 1,
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text has customized accessibility.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text can have customized dimensions 1`] = `
{
  "AutomationId": "text-height-width",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 100,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 100,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 100,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This text has customized dimensions.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 100,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text can have font variants 1`] = `
{
  "AutomationId": "font-variants",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 256,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Small Caps
",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 34,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Old Style nums 0123456789
",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 34,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Lining nums 0123456789
",
      "Top": 72,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 75,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Tabular nums
1111
2222
",
      "Top": 106,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 75,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Proportional nums
1111
2222
",
      "Top": 181,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text color 1`] = `
{
  "AutomationId": "text-color",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FFFF0000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Red color",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text color with children 1`] = `
{
  "AutomationId": "text-outer-color",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "(Normal text,(R)red(G)green(B)blue(C)cyan(M)magenta(Y)yellow(K)black(and bold(and tiny bold italic blue(and tiny normal blue))))",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text decoration solid linethrough 1`] = `
{
  "AutomationId": "text-decoration-solid-linethru",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Solid line-through",
  "Top": 38,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text decoration underline 1`] = `
{
  "AutomationId": "text-decoration-underline",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Solid underline",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text ellipsize 1`] = `
{
  "AutomationId": "text-ellipsize",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 378,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 48,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Truncated text is baaaaad.",
      "Top": 6,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 54,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Shrinking to fit available space is much better!",
      "Top": 66,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 40,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Add text to me to watch me shrink! ",
      "Top": 132,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 80,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Multiline text component shrinking is supported, watch as this reeeeaaaally loooooong teeeeeeext grooooows and then shriiiinks as you add text to me! ioahsdia soady auydoa aoisyd aosdy  ",
      "Top": 184,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 27,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Text limited by height, watch as this reeeeaaaally loooooong teeeeeeext grooooows and then shriiiinks as you add text to me! ioahsdia soady auydoa aoisyd aosdy  ",
      "Top": 276,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 27,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Differently sized nested elements will shrink together. LARGE TEXT! ",
      "Top": 315,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 353,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 92,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Reset",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 34,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 310,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Remove Text",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 78,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 572,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Add Text",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 54,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text font family 1`] = `
{
  "AutomationId": "text-font-family",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 17,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Sans-Serif Bold",
  "Top": 17,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text font padding 1`] = `
{
  "AutomationId": "text-font-padding",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 163,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 163,
      "HorizontalAlignment": "Stretch",
      "Left": 110,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 119,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 144,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Ey",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 119,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 37,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Default",
          "Top": 144,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 45,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 163,
      "HorizontalAlignment": "Stretch",
      "Left": 450,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 158,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 144,
          "HorizontalAlignment": "Stretch",
          "Left": 24,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "Ey",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 119,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "includeFontPadding: false",
          "Top": 144,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 158,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text force one line 1`] = `
{
  "AutomationId": "text-one-line",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Maximum of one line no matter now much I write here. If I keep writing it'll just truncate after one line",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text is selectable 1`] = `
{
  "AutomationId": "text-selectable",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "This text is selectable if you click-and-hold, and will offer the native Android selection menus.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text letter spacing 1`] = `
{
  "AutomationId": "text-letter-spacing",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 136,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "letterSpacing = 0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "letterSpacing = 2",
      "Top": 24,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "letterSpacing = 9",
      "Top": 48,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 21,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 67,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 16,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "With size and background color",
          "Top": 5,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 169,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "letterSpacing = -1",
      "Top": 93,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "[letterSpacing = 3][Nested letterSpacing = 0][Nested letterSpacing = 6]",
      "Top": 117,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text line height greater than font size 1`] = `
{
  "AutomationId": "line-height-greater-than-font-size",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 177,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Holisticly formulate inexpensive ideas before best-of-breed benefits. Continually expedite magnetic potentialities rather than client-focused interfaces.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text line height less than font size 1`] = `
{
  "AutomationId": "line-height-less-than-font-size",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 42,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Holisticly formulate inexpensive ideas before best-of-breed benefits. Continually expedite magnetic potentialities rather than client-focused interfaces.",
  "Top": 182,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text padding 1`] = `
{
  "AutomationId": "text-padding",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 39,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "10,10,10,10",
  "Text": "This text is indented by 10px padding on all sides.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text ranging opacity 1`] = `
{
  "AutomationId": "text-opacity",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 190,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 57,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 76,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 95,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 114,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 133,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 152,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This text has customized opacity.",
      "Top": 171,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text selection color 1`] = `
{
  "AutomationId": "text-selection-color",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "This text will have a orange highlight on selection.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text shadows 1`] = `
{
  "AutomationId": "text-shadow",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 27,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Demo text shadow",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text single line height greater than font size 1`] = `
{
  "AutomationId": "line-height-single-line-greater-than-font-size",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 22,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Holisticly formulate",
  "Top": 239,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text single line height less than font size 1`] = `
{
  "AutomationId": "line-height-single-line-less-than-font-size",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 10,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Holisticly formulate",
  "Top": 229,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text size 1`] = `
{
  "AutomationId": "text-size",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 31,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Size 23",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`TextTest Text transform 1`] = `
{
  "AutomationId": "text-transform",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 184,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "THIS TEXT SHOULD BE UPPERCASED.",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "this text should be lowercased.",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "This Text Should Be CAPITALIZED.",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Capitalize a date:The 9Th Of November, 1998",
      "Top": 57,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Capitalize a 2 digit date:The 25Th Of December",
      "Top": 76,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Mixed: UPPERCASE lowercase Capitalize Each Word",
      "Top": 95,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Should be "ABC":ABC",
      "Top": 114,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "Should be "AbC":AbC",
      "Top": 133,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF40E0D0",
      "Height": 32,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "WORKS WITH OTHER TEXT STYLES",
      "Top": 152,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 246,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
  ],
}
`;

exports[`TextTest Text unicode characters 1`] = `
{
  "AutomationId": "text-unicode",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 95,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "星际争霸是世界上最好的游戏。",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 192,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "星际争霸是世界上最好的游戏。",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 263,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "星际争霸是世界上最好的游戏。",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 192,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 57,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "星际争霸是世界上最好的游戏。星际争霸是世界上最好的游戏。星际争霸是世界上最好的游戏。星际争霸是世界上最好的游戏。",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
      ],
    },
  ],
}
`;

exports[`TextTest Text wrapping 1`] = `
{
  "AutomationId": "text-wrap",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "The text should wrap if it goes on multiple lines. See, this is going to the next line.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 300,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;
